--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=8000
 DB_FILE=db/dev.db
-JWT_SECRET=<<generate_strong_secret_here>>
+JWT_SECRET="J9TYXlkFw5zzfw=="
 JWT_EXPIRES_IN=604800
-SCHEMA=<<custom_schema_name_here>>
+SCHEMA="dbSchema"
